# Meteor

./: .gitignore  CLAUDE.md  Meteor  Meteor.desktop  README.md  app_launcher.py  install.sh  mcp.json  meteor_gui.py  opencode.json  pyproject.toml  run.py
.cursor/: mcp.json
.cursor-plugin/: plugin.json
.opencode/agent/: kitt.md  loop-freak.md  terminal.md
agents/: kitt.md  loop-freak.md  terminal.md
app/: __init__.py  bootstrap.py  config.py  main.py
app/agent/: __init__.py  chatbot_loop.py  kitt.py  loop.py  loop_freak.py  strategy.py  web_search.py
app/api/: __init__.py  main.py
app/arsenal/: __init__.py  catalog.py  weapons.py
assets/: meteor.icns
config/: meteor.yaml
docs/: architecture.md  branching.md  composio-setup.md  doctrine.md  firewalls-network-security-2027.md  interpreter.md  mcp-arsenal.md  opencode.md  opus-finish-prompt.md  opus-refine-prompt.md  pr-template.md  reverse-engineering.md  terminal-bridge.md  tools.md
ideas/: pipeline-toolkit.md
plugins/: example_plugin.py
scripts/: build_icon.py  build_macos_icon.py  composio-login.sh  cursor-mcp-setup.sh  gen_ldrago_icon.py  generate-tools-doc.py  install_linux_app.sh  install_meteor_app.sh  install_windows_app.ps1  loop-freak-tick.sh  run-meteor-mcp.sh  setup-ollama.sh  verify_shell.py
tests/: test_agent.py  test_arsenal.py  test_asset_graph.py  test_bootstrap.py  test_config.py  test_evidence.py  test_expander.py  test_exploit_reverse_layers.py  test_firewall_analyzer.py  test_graph_tools.py  test_grinder.py  test_hyper_search.py  test_hyper_search_api.py  test_infiltration.py  test_integration.py  test_intent_router.py  test_interpreter.py  test_kernel_posture.py  test_kitt.py  test_loop_freak.py  test_mcp_policy.py  test_memory.py  test_memory_triggers.py  test_models.py  test_network_scope.py  test_observability.py  test_ollama_adapter.py  test_ollama_launcher.py  test_orchestration.py  test_pentest_data.py  test_pentest_tools.py  test_policy.py  test_probe_engine.py  test_retrieval.py  test_runtime_contracts.py  test_runtime_enhancements.py  test_scraping.py  test_signal.py  test_sql_policy.py  test_storage.py  (+2 more)
(+151 files in other folders)
