[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "meteor"
version = "0.1.0"
description = "Local-first AI runtime. The runtime is the product."
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "playwright>=1.40",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "rapidfuzz>=3.0.0",
    "httpx>=0.25.0",
    "requests>=2.31.0",
    "pywebview>=5.0",
    "pillow>=10.0",
]

[project.optional-dependencies]
llama = [
    "llama-cpp-python>=0.2.0",
]
dev = [
    "pytest>=7.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
